Bug 312062 - The song goes to the begin when I click in stop the first time and fadeout is enabled
Summary: The song goes to the begin when I click in stop the first time and fadeout is...
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Playback (other bugs)
Version First Reported In: 2.6.90 (2.7 beta)
Platform: Other Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
: 307284 (view as bug list)
Depends on: 313551
Blocks:
  Show dependency treegraph
 
Reported: 2012-12-22 07:32 UTC by smartinds
Modified: 2013-01-20 12:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments
Amarok with Debug (4.18 KB, application/octet-stream)
2012-12-22 07:33 UTC, smartinds
Details

Note You need to log in before you can comment on or make changes to this bug.
Description smartinds 2012-12-22 07:32:31 UTC
When I play a song, then I click in stop (first time), the song goes to the begin, and later stop.
When I repeat the process (same song), this works well (the song stop with delay=2500 ms).

Reproducible: Always

Steps to Reproduce:
1. Play a song
2. Click Stop
3. Results <Wrong>
4. Play the same song
5. Click Stop
6. Results <Good>



amarok.log.gz (4.2 Kb) -> Amarok with Debug
http://www.filesend.net/download.php?f=7c9c98adfe390edf1d321c7441c009e9
Comment 1 smartinds 2012-12-22 07:33:54 UTC
Created attachment 75967 [details]
Amarok with Debug
Comment 2 Myriam Schweingruber 2012-12-22 10:28:11 UTC
Which phonon backend and version are you using? Please try both the gstreamer and the vlc backend.
Comment 3 smartinds 2012-12-22 13:37:40 UTC
Amarok Versión: 2.6.0
KDE Version: 4.8.5 (4.8.5) "release 2"
Qt Version: 4.8.1
Phonon Version: 4.6.0
Phonon's Motor: GStreamer (4.6.1)
PulseAudio: Yes
OS: OpenSUSE 12.2 (x86_64)
Language: Spanish
Comment 4 Matěj Laitl 2012-12-22 18:31:33 UTC
This happens to me too with phonon-gstreamer 4.6.2. (ohonon-vlc apparently doesn't support fading out at all, so this is not reproducible there) Eesiest work-around is to turn off fadeout. Not sure whether Amarok or phonon-gst bug, but let's consider this an Amarok bug until I prove otherwise.
Comment 5 Myriam Schweingruber 2012-12-22 18:33:52 UTC
The phonon-backend-gstreamer you are using is obsolete, please update to version 4.6.2. Also please install and try the phonon-backend-vlc version 0.6.0 and test if you can reproduce the bug with that backend. If you do not know how, please check the forum at http://forum.kde.org/amarok
Comment 6 smartinds 2012-12-23 03:34:34 UTC
I updated to phonon-backend-gstreamer 4.6.2 but the same result.
Also I change by phonon-vlc-backend but, NO SOUND.
Comment 7 Myriam Schweingruber 2012-12-23 11:33:01 UTC
(In reply to comment #6)
> I updated to phonon-backend-gstreamer 4.6.2 but the same result.
> Also I change by phonon-vlc-backend but, NO SOUND.

Did you restart KDE so the phonon backend is picked up?
Comment 8 smartinds 2012-12-23 17:32:50 UTC
(In reply to comment #7)
> (In reply to comment #6)
> > I updated to phonon-backend-gstreamer 4.6.2 but the same result.
> > Also I change by phonon-vlc-backend but, NO SOUND.
> 
> Did you restart KDE so the phonon backend is picked up?

Yes, I restart KDE and all S.O, but with phonon-vlc-backend I don't have sound in amarok. Of course, I have sound in smplayer and others app.

If you need more information for fix this bug, I will be happy to give it.
Comment 9 Myriam Schweingruber 2012-12-23 22:14:58 UTC
Thank you for the feedback.
Comment 10 Matěj Laitl 2013-01-20 10:33:06 UTC
*** Bug 307284 has been marked as a duplicate of this bug. ***
Comment 11 Matěj Laitl 2013-01-20 12:13:26 UTC
Git commit 2fb2123113218ab7c0201ba2766c72319409190f by Matěj Laitl.
Committed on 20/01/2013 at 13:06.
Pushed by laitl into branch 'master'.

EngineController, Fadeouter: improve fadeout behaviour by using RAII principles

Note that this needs phonon-gstreamer bug 313551 solved to unleash the
full power.

BUGFIXES:
 * Fix bumpy fade-out when first used.
 * Fix subtle bugs when a lond fade-out is initiated near the song end.
 * Don't try to fade-out with phonon backends that don't support it. (vlc)
FIXED-IN: 2.8

M  +3    -0    ChangeLog
M  +1    -0    src/CMakeLists.txt
M  +44   -60   src/EngineController.cpp
M  +4    -8    src/EngineController.h
A  +61   -0    src/playback/Fadeouter.cpp     [License: GPL (v2+)]
A  +70   -0    src/playback/Fadeouter.h     [License: GPL (v2+)]

http://commits.kde.org/amarok/2fb2123113218ab7c0201ba2766c72319409190f