EngineController, Fadeouter: improve fadeout behaviour by using RAII principles

Note that this needs phonon-gstreamer bug 313551 solved to unleash the
full power.

BUGFIXES:
 * Fix bumpy fade-out when first used.
 * Fix subtle bugs when a lond fade-out is initiated near the song end.
 * Don't try to fade-out with phonon backends that don't support it. (vlc)

BUG: 312062
FIXED-IN: 2.8